# bmk

./: .cirrus.yml  .gitignore  LICENSE  Makefile  Mkfile  README.md  TODO  TODO.md  autogen.sh  bmk.typ  bmk.vim  bootstrap  compats.c  compats.h  config.mk.in  configure  configure.ac  mk.1  mk.c  mk.h  retroci
.builds/: alpine.yml  freebsd.yml  netbsd.yml  openbsd.yml
m4/: as_help_string.m4  ax_compiler_vendor.m4  mk_check_compile_flag.m4  mk_use_system_extensions.m4
